feat(docs): update Traveler-is-Vision

--- a/docs/blog/Traveler-is-Vision.mdx
+++ b/docs/blog/Traveler-is-Vision.mdx
@@ -14,9 +14,207 @@ labels:
 
 ### 蒙德
 
+![](https://f.pz.al/pzal/2023/12/22/47b74437c917f.png)
+
+<span align="center" className="img-alt block">
+  ▲ 坠星山谷 - 星落湖
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/c3b74c53828a9.png)
+
+<span align="center" className="img-alt block">
+  ▲ 坠星山谷 - 风起地
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/aa319c4cf8e2c.png)
+
+<span align="center" className="img-alt block">
+  ▲ 蒙德城 - 城门路
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/5c3aac4ccc278.png)
+
+<span align="center" className="img-alt block">
+  ▲ 蒙德城 - 西风大教堂
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/8246836e47660.png)
+
+<span align="center" className="img-alt block">
+  ▲ 明冠山地 - 风龙废墟
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/61284f5b3fc1a.png)
+
+<span align="center" className="img-alt block">
+  ▲ 龙脊雪山 - 覆雪之路
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/92825f479c307.png)
+
+<span align="center" className="img-alt block">
+  ▲ 龙脊雪山 - 覆雪之路 - 七天神像
+</span>
+
 ### 璃月
 
+![](https://f.pz.al/pzal/2023/12/22/01dfae0cf0920.png)
+
+<span align="center" className="img-alt block">
+  ▲ 璃月港 - 起点
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/02dc83e1aae31.png)
+
+<span align="center" className="img-alt block">
+  ▲ 璃月港 - 天衡山
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/c14dead5224ff.png)
+
+<span align="center" className="img-alt block">
+  ▲ 渌华池
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/601e58b5e35b6.png)
+
+<span align="center" className="img-alt block">
+  ▲ 伏龙树
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/825125f51d04f.png)
+
+<span align="center" className="img-alt block">
+  ▲ 庆云顶
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/9f9ab3b14a08b.png)
+
+<span align="center" className="img-alt block">
+  ▲ 轻策庄
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/c13ff6429e7a0.png)
+
+<span align="center" className="img-alt block">
+  ▲ 碧水源 - 竹林
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/cf83813e63c29.png)
+
+<span align="center" className="img-alt block">
+  ▲ 望舒客栈
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/ba77deca1cab8.png)
+
+<span align="center" className="img-alt block">
+  ▲ 层岩巨渊·地下矿区
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/98ca6d8f3909d.png)
+
+<span align="center" className="img-alt block">
+  ▲ 层岩巨渊·地下矿区
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/abf4aecad0332.png)
+
+<span align="center" className="img-alt block">
+  ▲ 层岩巨渊·地下矿区
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/ebc2bb9caad0f.png)
+
+<span align="center" className="img-alt block">
+  ▲ 层岩巨渊·地下矿区
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/546a2db2d3d63.png)
+
+<span align="center" className="img-alt block">
+  ▲ 瑶光滩 - 小宝炮弹发射
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/940bf543e593f.png)
+
+<span align="center" className="img-alt block">
+  ▲ 瑶光滩 - 小宝炮弹打脑门了呀
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/b82a0ecfbef0e.png)
+
+<span align="center" className="img-alt block">
+  ▲ 碧水源 - 纯水精灵
+</span>
+
 ### 稻妻
+
+![](https://f.pz.al/pzal/2023/12/22/3c08dec569a7b.png)
+
+<span align="center" className="img-alt block">
+  ▲ 离岛 - 港口
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/d3904729179ef.png)
+
+<span align="center" className="img-alt block">
+  ▲ 稻妻城 - 街道
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/c4f33a8e9e627.png)
+
+<span align="center" className="img-alt block">
+  ▲ 影向山 - 鸣神大社
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/f173e01b41fee.png)
+
+<span align="center" className="img-alt block">
+  ▲ 影向山 - 梦想极乐之yi
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/0ab8d0ca62e18.png)
+
+<span align="center" className="img-alt block">
+  ▲ 影向山 - 【神樱大祓世界任务】 - 花散里任务点
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/fb5b9830d47dc.png)
+
+<span align="center" className="img-alt block">
+  ▲ 白狐之野 - 【神樱大祓世界任务】 - 花散里任务点
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/7217bc15eafab.png)
+
+<span align="center" className="img-alt block">
+  ▲ 镇守之森 - 【狐斋宫的妖狸好友】 - 五百藏
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/0155163d78831.png)
+
+<span align="center" className="img-alt block">
+  ▲ 鸣神岛 - 神里屋敷
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/e837685594e2a.png)
+
+<span align="center" className="img-alt block">
+  ▲ 清籁岛 - 天云峠
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/902e7b2262cb4.png)
+
+<span align="center" className="img-alt block">
+  ▲ 鹤观 - 管名山
+</span>
+
+![](https://f.pz.al/pzal/2023/12/22/c82e620e303aa.png)
+
+<span align="center" className="img-alt block">
+  ▲ 海祇岛 - 珊瑚宫
+</span>
 
 ### 须弥
 
@@ -24,38 +222,56 @@ labels:
 
 ![](https://f.pz.al/pzal/2023/12/13/a100ecff2f32d.png)
 
-<p align="center">▲ 来自泥土，归于黄沙</p>
+<span align="center" className="img-alt block">
+  ▲ 来自泥土，归于黄沙
+</span>
 
 ![](https://f.pz.al/pzal/2023/12/13/a085af631eb74.png)
 
-<p align="center">▲ 永恒的葱茏之梦 - 入口</p>
+<span align="center" className="img-alt block">
+  ▲ 永恒的葱茏之梦 - 入口
+</span>
 
 ![](https://f.pz.al/pzal/2023/12/13/1cb52f736d2d4.png)
 
-<p align="center">▲ 永恒的葱茏之梦 - 入口 - 凝光</p>
+<span align="center" className="img-alt block">
+  ▲ 永恒的葱茏之梦 - 入口 - 凝光
+</span>
 
 ![](https://f.pz.al/pzal/2023/12/13/f39ca95eae9b9.png)
 
-<p align="center">▲ 永恒的葱茏之梦 - 入口 - 雷电将军</p>
+<span align="center" className="img-alt block">
+  ▲ 永恒的葱茏之梦 - 入口 - 雷电将军
+</span>
 
 ![](https://f.pz.al/pzal/2023/12/13/2857ce4c0f3df.png)
 
-<p align="center">▲ 永恒的葱茏之梦 - 鱼跃</p>
+<span align="center" className="img-alt block">
+  ▲ 永恒的葱茏之梦 - 鱼跃
+</span>
 
 ![](https://f.pz.al/pzal/2023/12/13/4572d9c08623e.png)
 
-<p align="center">▲ 永恒的葱茏之梦 - 鱼跃</p>
+<span align="center" className="img-alt block">
+  ▲ 永恒的葱茏之梦 - 鱼跃
+</span>
 
 ![](https://f.pz.al/pzal/2023/12/13/446b85ccbfed2.png)
 
-<p align="center">▲ 永恒的葱茏之梦 - 鱼跃</p>
+<span align="center" className="img-alt block">
+  ▲ 永恒的葱茏之梦 - 鱼跃
+</span>
 
 ![](https://f.pz.al/pzal/2023/12/13/949c602d07c2a.png)
 
-<p align="center">▲ 永恒的葱茏之梦 - 瀑布</p>
+<span align="center" className="img-alt block">
+  ▲ 永恒的葱茏之梦 - 瀑布
+</span>
 
 ![](https://f.pz.al/pzal/2023/12/13/b353cc4a669cd.png)
 
-<p align="center">▲ 花神的永眠之处</p>
+<span align="center" className="img-alt block">
+  ▲ 花神的永眠之处
+</span>
 
 ### 枫丹
