--- a/docs/blog/Simple-implementation-of-the-file-download-progress-bar.mdx
+++ b/docs/blog/Simple-implementation-of-the-file-download-progress-bar.mdx
@@ -11,7 +11,7 @@ labels:
 一般情况下，文件下载是通过 `HTTP` 请求来获取文件的响应。在这个过程中，浏览器会将文件划分为多个数据块，并在接收每个数据块时触发 `progress` 事件。`progress` 事件提供了一个 `ProgressEvent`对象，其中包含了关于下载进度的信息，如已下载的字节数和总字节数。通过计算已下载字节数与总字节数的比例，我们就可以得到下载进度得百分比了。
 
 ```javascript
-const fileUrl = "https://jsd.cdn.zzko.cn/gh/LycixRemix/media-gallery@main/pc-images/1697731781477.webp";
+const fileUrl = "https://cdn.statically.io/gh/LycixRemix/media-gallery@main/pc-images/1697731781477.webp";
 
 function downloadFile(url) {
     return new Promise((resolve, reject) = >{
@@ -67,7 +67,7 @@ function handlerDownLoad() {
 
 ```javascript
 // 文件下载地址
-const fileUrl = "https://jsd.cdn.zzko.cn/gh/LycixRemix/media-gallery@main/pc-images/1697731781477.webp";
+const fileUrl = "https://cdn.statically.io/gh/LycixRemix/media-gallery@main/pc-images/1697731781477.webp";
 
 function download(url, name) {
     const a = document.createElement("a");
