feat(update): simple change and add about page

--- a/docs/about/index.mdx
+++ b/docs/about/index.mdx
@@ -1,2 +1,7 @@
-![](https://cdn.jsdelivr.net/gh/LycixRemix/media-gallery/pc-images/1700721967752.webp)
-**Original Image Address [西行寺幽幽子](https://www.pixiv.net/artworks/60181142). All rights reserved to the author [Miv4t](https://www.pixiv.net/users/11246082).**
+### Welcome! Here is 阿琳LycixRemix 👏
+
+I've always thought that procrastination is a person's worst enemy. Whenever I make up my mind to do something, this damn bad habit will always appear to prevent me from taking action. As they say, "A journey of a thousand miles begins with a single step". If I can't start, I can't realise what I want to do, so I think I need to get rid of this damn bad habit (damn it, think about it, do it first).
+
+Coding and writing something amusing or useful may be a nice way to spend time ^^, and I hope I can do more in the next few years.
+
+![](https://cdn.statically.io/gh/LycixRemix/LycixRemix@main/public/116203893.webp)
